<resources>
    <string name="app_name">ztanphsop</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bike_detail_bike_name">Backflip</string>
    <string name="bike_detail_bike_subtitle">Subtitle</string>
    <string name="arm">arm</string>
    <string name="disarm">disarm</string>
    <string name="settings">settings</string>

    <string name="sightings">Sightings</string>
    <string name="sightings_info">Find your bike!</string>
    <string name="theft_message">Theft Message</string>
    <string name="theft_message_info">Edit or delete</string>
    <string name="chats">Chats</string>
    <string name="chats_info">Chats to this bike</string>

    <string name="bike_characteristics">Characteristics</string>
    <string name="bike_privacy_note_1">These information will not be published but could be important in case of theft.</string>
    <string name="bike_privacy_note_2">These information will be published in the App and our Website.</string>
    <string name="bike_more_details">More Details</string>
    <string name="bike_private_notes">Private Notes</string>


    <!-- debug and dummy strings -->
    <string name="not_implemented_yet">[ not implemented yet ]</string>
    <string name="dummy_extra_string">dummy message</string>
    <string name="screen_title_chats">Chats</string>
    <string name="screen_title_sightings">Sightings</string>
    <string name="screen_title_bike_edit">Edit</string>
    <string name="screen_title_edit_images">Edit Image(s)</string>


    <!-- colors -->
    <string name="color_blue">blue</string>
    <string name="color_brown">brown</string>
    <string name="color_yellow">yellow</string>
    <string name="color_grey">grey</string>
    <string name="color_green">green</string>
    <string name="color_violet">violet</string>
    <string name="color_orange">orange</string>
    <string name="color_pink">pink</string>
    <string name="color_red">red</string>
    <string name="color_black">black</string>
    <string name="color_silver">silver</string>
    <string name="color_white">white</string>


    <!-- form and validation strings -->
    <string name="hint_not_set">not set</string>
    <string name="hint_bike_name">bike name</string>
    <string name="hint_bike_type">bike type</string>
    <string name="hint_bike_manufacturer">manufacturer</string>
    <string name="hint_bike_primary_color">primary color</string>
    <string name="hint_bike_secondary_color">secondary color</string>
    <string name="hint_bike_identification_number">identification number</string>
    <string name="hint_bike_size">bike size</string>

    <string name="err_too_short">too short</string>
    <string name="err_too_long">too long</string>
    <string name="err_too_small">too small</string>
    <string name="err_too_big">too big</string>
    <string name="err_special_characters">no special characters allowed</string>

    <string name="btn_save_changes">Save Changes</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="really_delete_bike">Really delete this bike?</string>
    <string name="delete_bike">Delete Bike</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="save_changes_text">Änderungen speichern</string>
    <string name="yes">yes</string>
    <string name="save_changes_title">Save changes</string>
    <string name="snack_saved_changes">Saved changes</string>
    <string name="restore_changes_text">Values restored</string>
    <string name="theft_messages">Theft messages</string>

</resources>
