<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dedede"
    android:orientation="vertical">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout style="@style/FJ_Form_Holder">

            <!-- bike name -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_bike_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/input_bike_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_bike_name"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- characteristics text section -->
            <TextView
                style="@style/FJ_H2_Dark"
                android:text="@string/bike_characteristics" />

            <TextView
                style="@style/FJ_H4_Dark"
                android:text="@string/bike_privacy_note_1" />

            <!-- bike type -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_bike_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/input_bike_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_bike_type"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- bike manufacturer -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_bike_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/input_bike_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_bike_manufacturer"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- bike color section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!-- primary color -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_bike_secondary_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <!--<EditText-->
                        <!--android:id="@+id/input_bike_secondary_color"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:hint="@string/hint_bike_secondary_color"-->
                        <!--android:singleLine="true" />-->

                    <Spinner
                        android:id="@+id/input_picker_primary_color2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"/>

                </android.support.design.widget.TextInputLayout>

                <!-- secondary color -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_bike_primary_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/input_bike_primary_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_bike_primary_color"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Polizeilich registriert?" />

            <!-- bike color section picker -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <!-- primary color -->
                <Spinner
                    android:id="@+id/input_picker_primary_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:entries="@array/choices_bike_color" />

                <!-- secondary color -->
                <Spinner
                    android:id="@+id/input_picker_secondary_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:entries="@array/choices_bike_color" />
            </LinearLayout>

            <!-- bike manufacturer -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_bike_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/input_bike_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_bike_size"
                    android:inputType="number"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- more details text section -->
            <TextView
                style="@style/FJ_H2_Dark"
                android:text="@string/bike_more_details" />

            <TextView
                style="@style/FJ_H4_Dark"
                android:text="@string/bike_privacy_note_2" />

            <Button
                android:id="@+id/btn_save_changes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/btn_save_changes"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>